# rust-file-backend

./: .env.example  .env.sample  .gitignore  ARCHITECTURE.md  BETA4_RELEASE_CHECKLIST.md  Cargo.toml  OIDC_INTEGRATION_ANALYSIS.md  README.md  RELEASE_NOTES.md  api_logs.txt  build_error.txt  build_log.txt  build_log_2.txt  bulk_delete_handler.txt  bulk_delete_types.txt  check_log.txt  check_log_3.txt  docker-compose.nginx.yml  docker-compose.yml  full_api_logs.txt  full_api_logs_v2.txt  full_api_logs_v3.txt  git_status.txt  implementation_plan.md  log.txt  podman-up.bat  postman_collection.json  reflog.txt  renamed_file.txt  run.bat  task.md  test_scenario.ps1  thumbnail_logs.txt  walkthrough.md  web_logs.txt  zap.yaml
.agent/workflows/: run_tests.md
.github/workflows/: ci.yml
OWASP_scanning/: A.html  A.json  A.md  quick_report.md  quick_scan.js  quick_scan.py  remediation_report.md  result.json  run_zap_scan.bat  test_report.txt  zap_report.html  zap_report.json  zap_report.md
PENTEST_scan/: COMPLETE_REMEDIATION.md  REMEDIATION_SUMMARY.md  SECURITY_QUICK_REF.md  SQL_INJECTION_FIX.md  zap_report.html  zap_report.json
PENTEST_scan/new/: zap_report.html  zap_report.json  zap_report.md
api/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BETA5_RELEASE_CHECKLIST.md  CLEANUP_INSTRUCTIONS.md  Cargo.toml  Dockerfile  GUIDE_AND_RULES.md  README.md  RELEASE_NOTES.md  admin_files.txt  build_error_mingw.txt  build_errors_2.txt  build_errors_3.txt  build_errors_4.txt  build_output.txt  logs  openapi.json  openapi_final.json  openapi_utf8.json  postman_collection.json  rust-file-backend.postman_collection.json  test_output.txt
api/examples/: check_admin_files.rs  check_db.rs  check_ini_sub.rs  run_migration.rs  verify_upload.rs
api/migrations/: 20260128000000_add_deleted_at.sql  20260130010000_rename_encryption_key.sql  20260203000000_initial_schema.sql  20260209000000_upload_sessions.sql  20260212000000_cloud_provider_tokens.sql  20260217000000_add_favorites.sql  20260224000000_add_has_thumbnail.sql  20260225000000_add_is_encrypted_to_storage_files.sql  20260225100000_add_sharing.sql
api/scripts/: comprehensive_test.ps1  generate_postman.js  oidc_clients.json  oidc_users.json  run_oidc.bat
api/src/: lib.rs  main.rs
api/src/api/: error.rs  mod.rs
api/src/api/handlers/: auth.rs  captcha.rs  cloud_providers.rs  files.rs  health.rs  mod.rs  shares.rs  upload.rs  users.rs
api/src/api/handlers/files/: archive.rs  bulk.rs  download.rs  list.rs  manage.rs  mod.rs  types.rs  upload.rs
api/src/api/middleware/: auth.rs  mod.rs  security.rs
api/src/config/: mod.rs
api/src/entities/: allowed_mimes.rs  audit_logs.rs  blocked_extensions.rs  cloud_provider_tokens.rs  file_metadata.rs  file_tags.rs  mod.rs  prelude.rs  share_access_logs.rs  share_links.rs  storage_files.rs  tags.rs  tokens.rs  upload_sessions.rs  user_file_facts.rs  user_files.rs  users.rs
api/src/infrastructure/: database.rs  mod.rs  seed.rs  storage.rs
api/src/services/: audit.rs  cloud_provider_manager.rs  expiration.rs  file_service.rs  metadata.rs  mod.rs  scanner.rs  share_service.rs  storage.rs  storage_lifecycle.rs  thumbnail_service.rs  upload_service.rs
api/src/services/cloud_providers/: google_drive.rs  mod.rs
api/src/services/file_service/: bulk.rs  delete.rs  metadata.rs  mod.rs  types.rs  upload.rs
api/src/utils/: auth.rs  keyed_mutex.rs  mod.rs  validation.rs
api/tests/: api_integration_test.rs  clamav_test.rs  cloud_drive_test.rs  deduplication_deletion_test.rs  download_test.rs  large_upload_test.rs  security_test.rs  upload_test.rs
examples/: check_dedup.rs  verify_upload.rs
migrations/: 20240125000000_initial_schema.sql  20260126000000_security_schema.sql  20260128000000_add_deleted_at.sql  20260130000000_encryption_and_audit.sql  20260130010000_rename_encryption_key.sql  20260130020000_user_profile_fields.sql  20260202000000_dynamic_validation_rules.sql
scripts/: cleanup_for_release.ps1  comprehensive_test.ps1  run_oidc.bat  test_e2e_curl.ps1  test_e2e_flow.ps1  test_full_flow.ps1  test_metadata.ps1  test_swagger_endpoints.ps1
src/: config.rs  lib.rs  main.rs
src/api/: error.rs
src/api/handlers/: auth.rs  files.rs  health.rs  mod.rs  user_settings.rs  users.rs
src/api/middleware/: auth.rs  metrics.rs  request_id.rs
src/config/: mod.rs
src/entities/: magic_signatures.rs  mod.rs  prelude.rs  storage_files.rs  tokens.rs  user_file_facts.rs  user_files.rs  user_settings.rs  users.rs
src/handlers/: auth.rs  files.rs
src/infrastructure/: database.rs  mod.rs  scanner.rs  storage.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/services/: audit.rs  encryption.rs  expiration.rs  facts_service.rs  file_service.rs  key_management.rs  metadata.rs  mod.rs  scanner.rs  storage.rs  storage_lifecycle.rs  worker.rs
src/utils/: auth.rs  hash.rs  mod.rs  validation.rs
tests/: api_integration_test.rs  clamav_test.rs  deduplication_deletion_test.rs  download_test.rs  encryption_test.rs  large_upload_test.rs  oidc_test.rs  security_test.rs  upload_test.rs
web/: .dockerignore  .env.example  Dockerfile  README.md  err.txt  index.html  nginx.conf  nginx.podman.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vite.config.ts.timestamp-1770912915101-63661007a258d.mjs
web/lib/: ReactFileManager.test.tsx  ReactFileManager.tsx  index.ts  tailwind.css
web/lib/components/: CommonModal.tsx  ContextMenu.tsx  DialogModal.tsx  FileIcon.tsx  FolderPath.tsx  MetadataModal.tsx  NewFolderModal.tsx  OperationToast.tsx  PreviewModal.tsx  RenameModal.tsx  Sidebar.tsx  SvgIcon.tsx  UploadProgressToast.tsx  Workspace.tsx  index.ts
web/lib/context/: FileManagerContext.tsx
web/lib/hooks/: useFileActions.ts  useLongPress.ts  useMarqueeSelection.ts  useMediaQuery.ts  useWorkspaceKeyboard.ts
web/lib/types/: Enums.ts  Types.ts  index.ts
web/lib/utils/: cropImage.ts  fileMappers.ts  fileUtils.ts  thumbnailCache.ts  upload.ts
web/src/: App.css  App.tsx  api.ts
web/src/captcha/: CaptchaWidget.css  CaptchaWidget.tsx  index.ts  useCaptcha.ts
(+78 files in other folders)
