[package]
name = "rust-file-backend"
version = "0.1.0-beta.4"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "any", "sqlite", "postgres", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-json" ] }
jsonwebtoken = "9.0"
aws-sdk-s3 = "1.0"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sha2 = "0.10"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
hex = "0.4"
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
strum = { version = "0.26", features = ["derive"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tower_governor = { version = "0.8.0", features = ["axum"] }
governor = "0.10.4"
log = "0.4"
infer = "0.15"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
async-recursion = "1.0"
kamadak-exif = "0.6.1"
lofty = "0.22.4"
lopdf = "0.39.0"
quick-xml = "0.39.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6.1"
tar = "0.4"
flate2 = "1.0"
thiserror = "2.0.18"
serde_urlencoded = "0.7.1"
percent-encoding = "2.3"
unrar = "0.5.8"
openidconnect = { version = "4.0.1", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
oauth2 = { version = "5.0", features = ["reqwest", "rustls-tls"] }
